fix caching for CompressJarTask (#25)
* fix caching for CompressJarTask

* remove old comments

* undo the patch thing